--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,20 @@
     <string name="emailInvalido">Email invalido!</string>
     <string name="senhaInvalida">Senhas diferentes!</string>
     <string name="bemVindo">Seja bem vindo</string>
+    <string name="title_exit">Deslogar</string>
+    <string name="title_cadastrados">Lista de Artes</string>
+    <string name="title_map">Artes no Mapa</string>
+    <string name="title_activity_maps">Map</string>
+    <string name="NaoExisteArte">Não existe Arte cadastrada!</string>
+    <string name="permissaoLocation">Ative a permissāo para poder utilizar!</string>
+    <string name="habiliteLocation">Ative o GPS!</string>
+    <string name="nomeDaArte">Nome da Arte</string>
+    <string name="SalvarArte">Salvar a Arte</string>
+    <string name="nomeArteVazio">Nome da Arte está vazio!</string>
+    <string name="definaUmaNota">Defina uma nota para a Arte</string>
+    <string name="fotoArte">Tira uma foto da sua Arte!</string>
+    <string name="nota">Nota:</string>
+    <string name="delete">Apagar</string>
+    <string name="edit">Editar</string>
+    <string name="compartilharImagem">Compartilhar Imagem</string>
 </resources>
