--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
     <string name="delete">Apagar</string>
     <string name="edit">Editar</string>
     <string name="compartilharImagem">Compartilhar Imagem</string>
+    <string name="novaArteLocalizada">Nova Arte localizada!</string>
 </resources>
